fixed centre alignment

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ html {
 
 * {
     font-family: 'BC-Falster-Grotesk-Regular', sans-serif;
-    border: 1px solid rgb(255, 0, 0);
 }
 
 body {
